# nvd

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  Containerfile  LICENSE  README.md  flake.nix  install.sh  justfile  main.nf  main_nf_scrub.nf  nextflow.config  pyproject.toml  run_nvd.py
.claude/skills/sourmash/: SKILL.md
.github/scripts/: test_installer_interactive.py  validate_schema_completeness.py
.github/workflows/: ci.yml  container-build-test.yml  docker-publish.yml  integration.yml  release.yml
assets/: README.md  empty_deacon.k31w1.idx  example_samplesheet.csv  grouped_illumina_lane_samplesheet.csv  grouped_lane_samplesheet.csv  grouped_ont_barcode_samplesheet.csv  human_virus_risk_group_lookup.tsv  human_viruses_taxlist.txt.zst  multiqc_config.yaml  test_samplesheet.csv
conf/: chtc-template.config  results.config  user-settings.mkfg
config/: config.yaml
docs/: INSTALLATION.md  cli_wrapper_guide.md  contributor_guide.md  crumbs_v1_spec.md  example_commands.md  nvd_cli_guide.md  sourmash_ncbi_wvdb_reference.md  virus_enrichment_index.md
legacy/: README.md
legacy/workflow/scripts/: remove_megablast_mapped_contigs.py
lib/: NvdDirs.groovy  NvdReporting.groovy  NvdUtils.groovy
lib/py_nvd/: __init__.py  _fingerprint.json  blast_consensus.py  cli_legacy.py  conftest.py  db.py  fingerprint.py  hits.py  models.py  multiqc_assembly.py  multiqc_blast.py  multiqc_domains.py  multiqc_fastx.py  multiqc_packages.py  multiqc_query_preparation.py  multiqc_report.py  multiqc_taxonomy.py  params.py  paths.py  presets.py  read_filenames.py  read_inputs.py  run_context.py  samplesheet_validation.py  schema.sql  sra_accessions.py  state.py  taxonomy.py  test_db.py  test_hits.py  test_models.py  test_multiqc_assembly.py  test_multiqc_blast.py  test_multiqc_fastx.py  test_multiqc_packages.py  test_multiqc_query_preparation.py  test_multiqc_report.py  test_multiqc_taxonomy.py  test_nextflow_integrity.py  test_state.py  (+2 more)
lib/py_nvd/cli/: __init__.py  app.py  prompts.py  provenance.py  samplesheet_validation.py  test_cli_smoke.py  test_provenance.py  test_utils.py  utils.py
lib/py_nvd/cli/commands/: __init__.py  config.py  hits.py  params.py  preset.py  resume.py  run.py  samplesheet.py  secrets.py  setup.py  state.py  taxonomy.py  test_samplesheet.py  test_setup.py  test_state_import_export.py  validate.py  version.py  wrapped.py
modules/: bbmap.nf  blast.nf  blast_queries.nf  contig_union.nf  contigs.nf  count_reads.nf  crumbs.nf  deacon.nf  fastqc.nf  fastx.nf  gottcha2.nf  hostile.nf  labkey.nf  long_read_assembly.nf  minimap2.nf  multiqc.nf  rapid_screening_eval.nf  reporting.nf  risk_groups.nf  sample_similarity.nf  samtools.nf  seqkit.nf  sourmash.nf  spades.nf  sratools.nf  stat.nf  utils.nf  validate_blast_labkey.nf
schemas/: README.md  nvd-params.latest.schema.json  nvd-params.v2.3.0.schema.json  nvd-params.v2.4.0.schema.json  nvd-params.v2.5.0.schema.json  nvd-params.v3.0.0.schema.json  nvd-params.v3.1.0.schema.json  nvd-params.v3.2.0.schema.json  nvd-params.v3.3.0.schema.json
scripts/: prepare_wvdb_sourmash_inputs.py  prototype_opal_benchmark.py
subworkflows/: bundle_blast_for_labkey.nf  bundle_for_labkey.nf  bundle_gottcha2_for_labkey.nf  classify_with_blastn.nf  classify_with_megablast.nf  contig_read_mapback.nf  crumbs_profiling.nf  extract_human_virus_contigs.nf  extract_human_viruses.nf  gather_reads.nf  host_depletion.nf  labkey_blast_reporting.nf  lims_integration.nf  long_read_denovo_ensembly.nf  map_reads_to_contigs.nf  map_reads_to_screened_contigs.nf  metagenome_profiling.nf  multiqc_bundling.nf  nvd_multiqc_reporting.nf  prepare_blast_queries.nf  preprocess_contigs.nf  preprocess_reads.nf  process_contigs.nf  rapid_screening.nf  rapid_screening_eval.nf  reporting.nf  sample_similarity_qc.nf  screen_contigs.nf  short_read_denovo_assembly.nf  validate_lk_blast_lists.nf  validate_lk_gottcha2_lists.nf
tests/: __init__.py  test_blast_query_optional_outputs.py  test_contig_alignment_plots.py  test_contig_coverage_histogram.py  test_fastq_grouping_golden.py  test_lane_concat_golden.py  test_nextflow_integration.py  test_no_contig_routing.py  test_nvd_multiqc_reporting.py  test_optional_contig_products.py  test_read_filtering.py  test_single_read_filtering.py  test_wvdb_sourmash_inputs.py
tests/data/: integration_sra_samplesheet.csv  mini_sourmash_lineages.csv  mini_virus_blast.ndb  mini_virus_blast.nhr  mini_virus_blast.nin  mini_virus_blast.njs  mini_virus_blast.nos  mini_virus_blast.not  mini_virus_blast.nsq  mini_virus_blast.ntf  mini_virus_blast_taxid_map.tsv  mini_virus_deacon.k31w1.idx  mini_virus_reference.fasta  reference.manifest.json
tests/scripts/: __init__.py  generate_integration_fixtures.py
workflow/: Snakefile  clumpify.smk  gottcha2.smk  nvd.smk  nvd_new.smk
workflow/scripts/: gottcha_blast_verify.py  labkey_upload.py  labkey_upload_fasta.py  labkey_upload_gottcha.py
workflows/: clumpify.nf  gather_reads.nf  gottcha2_workflow.nf  nvd2_workflow.nf  nvd_main.nf  preprocess_reads.nf  stat_blast_workflow.nf
