[project]
name = "nvd2"
description = ""
authors = [
  { name = "David O'Connor", email = "dhoconno@wisc.edu" },
  { name = "Nicholas Minor", email = "nrminor@wisc.edu" },
  { name = "William Gardner", email = "wkgardner@wisc.edu" },
]
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
  "biopython>=1.85",
  "labkey>=3.4.0",
  "loguru>=0.7.3",
  "lxml>=5.4.0",
  "more-itertools>=10.7.0",
  "pandas>=2.2.3",
  "polars>=1.27.1",
  "pysam>=0.23.0",
  "pyyaml>=6.0.2",
  "rich>=14.0.0",
  "snakemake>=9.3.1",
  "taxopy>=0.14.0",
  "typer>=0.15.2",
]

[tool.pixi.project]
channels = ["conda-forge", "bioconda", "anaconda"]
platforms = ["osx-64", "linux-64", "linux-aarch64"]

[tool.pixi.dependencies]
# Bioinformatics ToolKits
# ----------------------------------------------------------------------------------- #
samtools = ">=1.5,<2"
minimap2 = ">=2.22,<3"
seqkit = ">=2.10.0,<3"
bbmap = ">=39.19,<40"
vsearch = ">=2.30.0,<3"
nextflow = ">=24.10.5,<25"
zstd = ">=1.5.7,<2"
unzip = ">=6.0,<7"
yaml = ">=0.2.5,<0.3"
spades = ">=4.1.0,<5"
sqlite = ">=3.49.1,<4"
blast = ">=2.16.0,<3"
gottcha2 = ">=2.1.8.11,<3"

# System Dependencies
# ----------------------------------------------------------------------------------- #
openssl = ">=3.5.0,<4"
pkg-config = ">=0.29.2,<0.30"
compilers = ">=1.9.0,<2"

# ----------------------------------------------------------------------------------- #

[tool.pixi.target.linux-64.dependencies]
apptainer = ">=1.3.6,<2"

[tool.pixi.target.linux-aarch64.dependencies]
apptainer = ">=1.3.6,<2"

[tool.pixi.pypi-dependencies]
nvd2 = { path = ".", editable = true }

[dependency-groups]
dev = [
  "basedpyright>=1.28.4",
  "jupyter>=1.1.1",
  "marimo[sql]>=0.11.28",
  "polars>=1.26.0",
  "pyarrow>=19.0.1",
  "pytest>=8.3.5",
  "ruff>=0.11.2",
  "tox>=4.24.2",
]

[build-system]
requires = ["setuptools >= 40.8.0", "cffi >=1.15.0,!=1.17.0"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools]
py-modules = ["bin"]

[project.scripts]
"nvd" = "bin.__main__:main"

[tool.uv]
compile-bytecode = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S101", "E501", "PTH123", "TD003"]

# extend-ignore = ["ALL"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"
