[project]
name = "nvd"
description = "Novel Virus Detection metagenomics pipeline"
authors = [
  { name = "David O'Connor", email = "dhoconno@wisc.edu" },
  { name = "Nicholas Minor", email = "nrminor@wisc.edu" },
  { name = "William Gardner", email = "wkgardner@wisc.edu" },
]
requires-python = ">= 3.11"
version = "2.4.0"
dependencies = [
  "biopython>=1.85",
  "blake3>=1.0.8",
  "duckdb>=1.2.2",
  "jsonschema>=4.23.0",
  "labkey>=3.4.0",
  "loguru>=0.7.3",
  "lxml>=5.4.0",
  "more-itertools>=10.7.0",
  "pandas>=2.2.3",
  "polars>=1.27.1",
  "pydantic>=2.12.5",
  "pysam>=0.23.0",
  "pyyaml>=6.0.2",
  "rich>=14.0.0",
  "slack-sdk>=3.39.0",
  "snakemake>=9.3.1",
  "taxopy>=0.14.0",
  "typer>=0.15.2",
]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda", "anaconda"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
# Bioinformatics ToolKits
# ----------------------------------------------------------------------------------- #
bbmap = ">=39.19,<40"
blast = ">=2.16.0,<3"
fastp = ">=1.0.1,<2"
gottcha2 = ">=2.1.8.11,<3"
minimap2 = ">=2.22,<3"
samtools = ">=1.5,<2"
seqkit = ">=2.10.0,<3"
spades = ">=4.1.0,<5"
vsearch = ">=2.30.0,<3"

# System Dependencies
# ----------------------------------------------------------------------------------- #
compilers = ">=1.9.0,<2"
openssl = ">=3.5.0,<4"
pkg-config = ">=0.29.2,<0.30"
sqlite = ">=3.49.1,<4"
unzip = ">=6.0,<7"
yaml = ">=0.2.5,<0.3"
zstd = ">=1.5.7,<2"
nextflow = ">=25.10.2,<26"

# ----------------------------------------------------------------------------------- #

[tool.pixi.target.linux-64.dependencies]
apptainer = ">=1.3.6,<2"

[tool.pixi.target.linux-aarch64.dependencies]
apptainer = ">=1.3.6,<2"

[tool.pixi.pypi-dependencies]
nvd = { path = ".", editable = true }

[tool.pixi.tasks]
# Regenerate pipeline fingerprint (run after editing main.nf or nextflow.config)
fingerprint = "nvd-fingerprint"

[dependency-groups]
dev = [
  "basedpyright>=1.28.4",
  "jupyter>=1.1.1",
  "marimo[sql]>=0.11.28",
  "polars>=1.26.0",
  "pre-commit>=4.5.1",
  "pyarrow>=19.0.1",
  "pytest>=8.3.5",
  "ruff>=0.11.2",
  "tox>=4.24.2",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "lib"
module-name = ["py_nvd"]

[project.scripts]
"nvd" = "py_nvd.cli:main"
"nvd-fingerprint" = "py_nvd.fingerprint:main"

[tool.ruff.lint]
select = []
ignore = ["G004", "PTH"]
# extend-ignore = ["ALL"]

[tool.pytest.ini_options]
pythonpath = ["bin", "lib"]
testpaths = ["lib/py_nvd", "bin"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"
