[project]
name = "nvd"
description = "'Nother Virus Detection pipeline"
authors = [
  { name = "David O'Connor", email = "dhoconno@wisc.edu" },
  { name = "Nicholas Minor", email = "nrminor@wisc.edu" },
  { name = "William Gardner", email = "wkgardner@wisc.edu" },
]
requires-python = ">= 3.11, < 3.14"
version = "3.0.1"
dependencies = [
  "altair>=6.1.0",
  "biopython>=1.85",
  "jsonschema>=4.23.0",
  "labkey>=3.4.0",
  "loguru>=0.7.3",
  "lxml>=5.4.0",
  "more-itertools>=10.7.0",
  "numpy>=2.0.0",
  "pandas>=2.2.3",
  "polars>=1.27.1",
  "pydantic>=2.12.5",
  "pysam>=0.23.0",
  "pyyaml>=6.0.2",
  "rich>=14.0.0",
  "slack-sdk>=3.39.0",
  "taxopy>=0.14.0",
  "typer>=0.15.2",
  "vl-convert-python>=1.9.0.post1",
]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda", "anaconda"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
# Bioinformatics ToolKits
# ----------------------------------------------------------------------------------- #
bbmap = ">=39.19,<40"
blast = ">=2.16.0,<3"
deacon = ">=0.15.0,<0.16"
fastp = ">=1.0.1,<2"
minimap2 = ">=2.22,<3"
samtools = ">=1.5,<2"
seqkit = ">=2.10.0,<3"
spades = ">=4.1.0,<5"
vsearch = ">=2.30.0,<3"
rust = ">=1.94.0,<1.95"

# System Dependencies
# ----------------------------------------------------------------------------------- #
compilers = ">=1.9.0,<2"
openssl = ">=3.5.0,<4"
pkg-config = ">=0.29.2,<0.30"
sqlite = ">=3.49.1,<4"
unzip = ">=6.0,<7"
yaml = ">=0.2.5,<0.3"
zstd = ">=1.5.7,<2"
nextflow = ">=25.10.2,<26"
sracha = { version = ">=0.3.10,<0.4", channel = "bioconda" }
sourmash = ">=4.9.4,<5"
sourmash_plugin_branchwater = ">=0.9.15,<0.10"

# ----------------------------------------------------------------------------------- #

[tool.pixi.target.linux-64.dependencies]
apptainer = ">=1.3.6,<2"
rust-script = ">=0.36.0"

[tool.pixi.target.linux-aarch64.dependencies]
apptainer = ">=1.3.6,<2"

[tool.pixi.target.osx-64.dependencies]
rust-script = ">=0.36.0"

[tool.pixi.target.osx-arm64.dependencies]
rust-script = ">=0.36.0"

[tool.pixi.pypi-dependencies]
nvd = { path = ".", editable = true }

[tool.pixi.tasks]
e2e-test = "NVD_E2E_SHOW_PROGRESS=1 uv run pytest tests/test_nextflow_integration.py -m 'slow and network' -q -s"
e2e-test-ci = "uv run pytest tests/test_nextflow_integration.py -m 'slow and network' -q"

[dependency-groups]
dev = [
  "basedpyright>=1.28.4",
  "hypothesis>=6.155.7",
  "jupyter>=1.1.1",
  "marimo[sql]>=0.11.28",
  "polars>=1.26.0",
  "pre-commit>=4.5.1",
  "pyarrow>=19.0.1",
  "pytest>=8.3.5",
  "ruff>=0.15.0",
  "tox>=4.24.2",
  "ty>=0.0.15",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "lib"
module-name = ["py_nvd"]

[project.scripts]
"nvd" = "py_nvd.cli:main"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S101", "E501", "PTH", "TD003", "G004", "TRY300"]

[tool.ruff.lint.per-file-ignores]
"lib/py_nvd/test_*.py" = ["PLR2004", "SLF001"]
"lib/py_nvd/cli/test_*.py" = ["PLR2004", "SLF001"]
"lib/py_nvd/cli/commands/test_*.py" = ["PLR2004", "SLF001"]
"lib/py_nvd/cli/commands/*.py" = [
  "FBT001",
  "FBT002",
  "FBT003", # Typer uses booleans as positional args
  "B008", # typer.Option()/typer.Argument() in defaults
  "C901",
  "PLR0911",
  "PLR0912", # CLI commands are inherently complex
  "PLR0913",
  "PLR0915",
]

[tool.pytest.ini_options]
pythonpath = ["bin", "lib"]
testpaths = ["lib/py_nvd", "bin", "tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"
